--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -23,7 +23,9 @@ jobs:
         python-version: 3.12
 
     - name: Install dependencies
-      run: pip install pytest
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
     - name: Test with pytest
       run: pytest
